# youtube-analytics-project

./: pyproject.toml
src/: api.py  channel.py  playlist.py  video.py
tests/: test_channel.py  test_channel_magic_methods.py  test_playlist.py  test_video.py
