[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["ravcode9 <rlatypov2106@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.114.0"
pytest = "^7.4.4"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
